fix key error on Opacity page and wrapping on mobile

--- a/utah-design-system-website/src/css/6-components/project-components/_color-examples.scss
+++ b/utah-design-system-website/src/css/6-components/project-components/_color-examples.scss
@@ -45,6 +45,11 @@
     &--opacity-7 { opacity: 0.7 }
     &--opacity-8 { opacity: 0.8 }
     &--opacity-9 { opacity: 0.9 }
+
+    &--small {
+      width: 60px;
+      height: 60px;
+    }
   }
 }
 
